--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -12,6 +12,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./api
 
     steps:
       - name: Checkout code
@@ -26,12 +29,20 @@ jobs:
         run: go mod tidy
 
       - name: Build the project
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
+          STATIC_PATH: ${{ secrets.STATIC_PATH }}
+          HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
         run: go build ./...
 
   test:
     name: Test
     runs-on: ubuntu-latest
     needs: build
+    defaults:
+      run:
+        working-directory: ./api
 
     steps:
       - name: Checkout code
@@ -49,4 +60,6 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
-        run: go test -v -cover ./...
+          STATIC_PATH: ${{ secrets.STATIC_PATH }}
+          HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
+        run: go test ./tests/handlers_test.go
