--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -12,6 +12,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    environment: development
     defaults:
       run:
         working-directory: ./api
@@ -39,6 +40,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    environment: development
     needs: build
     defaults:
       run:
