--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -144,12 +144,10 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests for Note Sync
-        working-directory: ./pc_client
         run: |
-          python -m unittest tests/test.py
+          python -m unittest pc_client/tests/test.py
 
       - name: Run tests for Web Service
-        working-directory: ./web_client
         run: |
-          python -m unittest tests/test.py
+          python -m unittest web_client/tests/test.py
 
