Update cache key for Go modules to include all go.sum files

--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -115,9 +115,10 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('api/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+
 
       - name: Install dependencies
         working-directory: ./api
