--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -23,16 +23,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.24.1
-
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('api/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          cache-dependency-path: 'api/go.sum'
 
       - name: Install dependencies
         working-directory: ./api
@@ -108,17 +99,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.24.1
-
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('api/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
+          cache-dependency-path: 'api/go.sum'
 
       - name: Install dependencies
         working-directory: ./api
