Update .gitignore  add terraform conf and add GitHub Actions workflow for Docker image build and push

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ api/images/*
 .secrets
 .idea/*
 database/local_pgdata/
+do-terraform/terraform.tfvars
+do-terraform/.terraform/
+do-terraform/terraform.tfstate.backup
+do-terraform/terraform.tfstate
+do-terraform/.terraform.lock.hcl
