--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -55,7 +55,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Install dependencies for Web Service
-        working-directory: ./web_client
+        working-directory: ./useless_client
         run: |
           echo "API_TOKEN=${{ secrets.AUTHORIZATION }}" >> .env
           echo "SERVER_URL=${{ secrets.HOST_ADDRESS }}" >> .env
@@ -67,8 +67,8 @@ jobs:
         run: nohup python main.py &
 
       - name: Start Web Service
-        working-directory: ./web_client
-        run: nohup python main.py &
+        working-directory: ./useless_client
+        run: nohup python app.py &
 
   test:
     name: Test
