Update .gitignore and docker-compose.yaml to refine ignored files and comment out restart policy

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ api/static/*
 api/images/*
 .secrets
 .idea/*
-database/local_pgdata/
+database/local_pgdata.zip
 do-terraform/terraform.tfvars
 do-terraform/.terraform/
 do-terraform/terraform.tfstate.backup
