--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ do-terraform/.terraform/
 do-terraform/terraform.tfstate.backup
 do-terraform/terraform.tfstate
 do-terraform/.terraform.lock.hcl
+do-terraform/k8s/secret.yaml
