Refactor CI pipeline and add Docker image build steps

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ do-terraform/terraform.tfstate.backup
 do-terraform/terraform.tfstate
 do-terraform/.terraform.lock.hcl
 do-terraform/k8s/secret.yaml
+.github/workflows/docker-ghcr.yml
