--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -18,14 +18,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Установка Go и сборка API
+      # Set up Go and build the project
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.24.1
           cache-dependency-path: 'api/go.sum'
 
-      - name: Install dependencies
+      - name: Install Go dependencies
         working-directory: ./api
         run: go mod tidy
 
@@ -38,7 +38,7 @@ jobs:
           HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
         run: go build ./...
 
-      # Установка Python и запуск сервисов
+      # Set up Python for both clients
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -61,14 +61,6 @@ jobs:
           echo "SERVER_URL=${{ secrets.HOST_ADDRESS }}" >> .env
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Start Note Sync Service
-        working-directory: ./pc_client
-        run: nohup python main.py &
-
-      - name: Start Web Service
-        working-directory: ./useless_client
-        run: nohup python app.py &
 
   test:
     name: Test
@@ -101,7 +93,7 @@ jobs:
           go-version: 1.24.1
           cache-dependency-path: 'api/go.sum'
 
-      - name: Install dependencies
+      - name: Install Go dependencies
         working-directory: ./api
         run: go mod tidy
 
@@ -113,7 +105,7 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-      - name: Run tests
+      - name: Run Go tests
         working-directory: ./api
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -146,10 +138,32 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests for Note Sync
-        run: |
-          python -m unittest pc_client/tests/test.py
+        run: python -m unittest pc_client/tests/test.py
 
       - name: Run tests for Web Service
-        run: |
-          python -m unittest useless_client/tests/test_app.py
+        run: python -m unittest useless_client/tests/test_app.py
 
+  docker:
+    name: Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: test
+    if: ${{ github.ref == 'refs/heads/main' && success() }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
+
+      - name: Build api Docker image
+        run: docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/mdblog-api:latest -f api/Dockerfile .
+
+      - name: Build useless_client Docker image
+        run: docker build -t ghcr.io/${{ secrets.GHCR_USERNAME }}/mdblog-useless-client:latest -f useless_client/Dockerfile .
+
+      - name: Push api Docker image
+        run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/mdblog-api:latest
+
+      - name: Push useless_client Docker image
+        run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/mdblog-useless-client:latest
