Refactor CI pipeline: remove unnecessary comments and ensure code quality job depends on test job

--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -142,14 +142,12 @@ jobs:
 
       - name: Run tests for Web Service
         run: python -m unittest useless_client/tests/test_app.py
-# ======================================================================
-# ======================================================================
 
   code_quality:
     name: SonarQube Analysis
     runs-on: ubuntu-latest
     environment: development
-    # needs: test
+    needs: test
 
     services:
       postgres:
