--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -112,7 +112,7 @@ jobs:
           AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
           STATIC_PATH: ${{ secrets.STATIC_PATH }}
           HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
-        run: go test ./tests/handlers_test.go
+        run: go test ./...
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -211,7 +211,7 @@ jobs:
           STATIC_PATH: ${{ secrets.STATIC_PATH }}
           HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
         run: |
-          go test ./tests/handlers_test.go -coverprofile=coverage.out
+          go test ./... -coverprofile=coverage.out
           go tool cover -func=coverage.out
 
       # ------------------ Python  ------------------
