--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -211,7 +211,7 @@ jobs:
           STATIC_PATH: ${{ secrets.STATIC_PATH }}
           HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
         run: |
-          go test ./... -coverprofile=coverage.out
+          go test ./... -covermode=atomic -coverpkg=./... -coverprofile=coverage.out
           go tool cover -func=coverage.out
 
       # ------------------ Python  ------------------
