--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -204,14 +204,14 @@ jobs:
 
 
       - name: Run Go tests
-        working-directory: ./api
+        # working-directory: ./api
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
           STATIC_PATH: ${{ secrets.STATIC_PATH }}
           HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
         run: |
-          go test ./... -covermode=atomic -coverpkg=./... -coverprofile=coverage.out
+          go test ./api/... -covermode=atomic -coverpkg=./api/... -coverprofile=coverage.out
           go tool cover -func=coverage.out
 
       # ------------------ Python  ------------------
