Update Go test command and sonar-project.properties for coverage reporting

--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -211,10 +211,13 @@ jobs:
           STATIC_PATH: ${{ secrets.STATIC_PATH }}
           HOST_ADDRESS: ${{ secrets.HOST_ADDRESS }}
         run: |
-          go test ./... -covermode=atomic -coverpkg=./... -coverprofile=coverage.tmp
+          go test ./... -covermode=atomic -coverpkg=./... -coverprofile=coverage.out
           # sed -E 's#^github.com/Tarat0r/Markdown-Blog/##' coverage.tmp > $GITHUB_WORKSPACE/coverage.out
-          awk 'NR==1 {print; next} {print "api/" $0}' coverage.tmp > $GITHUB_WORKSPACE/coverage.out
-          go tool cover -func=$GITHUB_WORKSPACE/coverage.out
+          # awk 'NR==1 {print; next} {print "api/" $0}' coverage.tmp > $GITHUB_WORKSPACE/coverage.out
+          # go tool cover -func=$GITHUB_WORKSPACE/coverage.out
+          # awk 'NR==1 {print; next} {print "api/" $0}' coverage.tmp > ../coverage.out
+          # sed 's|github.com/Tarat0r/Markdown-Blog/|api/|' coverage.tmp > ../coverage.out
+          # go tool cover -func=../coverage.out
 
       # ------------------ Python  ------------------
 
