--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,12 @@ sonar.organization=tarat0r
 sonar.projectName=Markdown-Blog
 sonar.projectVersion=1.0
 sonar.sources=.
-sonar.go.coverage.reportPaths=coverage.out
+
+
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testdata/*
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+sonar.test.exclusions=**/vendor/**
+sonar.go.coverage.reportPaths=api/coverage.out
+
 sonar.python.coverage.reportPaths=coverage-pc_client.xml,coverage-useless_client.xml
