--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 sonar.sources=.
 
 
-sonar.exclusions=**/*_test.go,**/sqlc/**,**/vendor/**,**/testdata/*
+sonar.exclusions=**/*_test.go,**/main.go,**/sqlc/**,**/vendor/**,**/testdata/*
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
