Enhance Telegram notifications and Kubernetes configurations
- Added Telegram notification functionality for note creation, deletion, and updates.
- Updated CI pipeline to include new environment variables for Telegram integration.
- Modified Kubernetes deployment files to include namespaces for better resource management.
- Improved Docker Compose configuration for API and client services.
- Refactored scripts for applying Kubernetes configurations and testing API endpoints.

--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -34,6 +34,8 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
+          TG_TOKEN: ${{ secrets.TG_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           STATIC_PATH: ${{ vars.STATIC_PATH }}
           HOST_ADDRESS: ${{ vars.HOST_ADDRESS }}
         run: go build ./...
@@ -110,6 +112,8 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
+          TG_TOKEN: ${{ secrets.TG_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           STATIC_PATH: ${{ vars.STATIC_PATH }}
           HOST_ADDRESS: ${{ vars.HOST_ADDRESS }}
         run: |
@@ -210,6 +214,8 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           AUTHORIZATION: ${{ secrets.AUTHORIZATION }}
+          TG_TOKEN: ${{ secrets.TG_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           STATIC_PATH: ${{ vars.STATIC_PATH }}
           HOST_ADDRESS: ${{ vars.HOST_ADDRESS }}
         run: |
