--- a/do-terraform/k8s/api-deploy.yaml
+++ b/do-terraform/k8s/api-deploy.yaml
@@ -1,7 +1,7 @@
 # api-deploy.yaml
 apiVersion: apps/v1
 kind: Deployment
-metadata: {name: mdblog-api}
+metadata: {name: mdblog-api, namespace: mdblog}
 spec:
   replicas: 1           # стартуем с одного
   selector:
@@ -26,7 +26,7 @@ spec:
 ---
 apiVersion: v1
 kind: Service
-metadata: {name: mdblog-api}
+metadata: {name: mdblog-api, namespace: mdblog}
 spec:
   selector: {app: mdblog-api}
   ports: [{port: 80, targetPort: 8080}]
@@ -34,7 +34,7 @@ spec:
 ---
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
-metadata: {name: mdblog-api}
+metadata: {name: mdblog-api, namespace: mdblog}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
