--- a/do-terraform/k8s/postgres.yaml
+++ b/do-terraform/k8s/postgres.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pg-data
+  namespace: mdblog
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,6 +14,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
+  namespace: mdblog
 spec:
   serviceName: "postgres"
   replicas: 1
@@ -58,8 +60,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: mdblog
 spec:
   ports:
     - port: 5432
   selector:
     app: postgres
+envFrom:
+  - secretRef:
+      name: env
