Fix kubectl connection test command to use cat for config file

--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -326,7 +326,7 @@ jobs:
 
       - name: Test kubectl connection
         run: |
-          grep server $HOME/.kube/config
+          cat $HOME/.kube/config | grep server
           kubectl --kubeconfig $HOME/.kube/config get nodes
 
       - name: Deploy updated Docker images
