--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -321,13 +321,13 @@ jobs:
 
       - name: Set up kubeconfig
         run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > $HOME/.kube/config
+          mkdir -p /.kube
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > /.kube/config
 
       - name: Test kubectl connection
         run: |
-          cat $HOME/.kube/config | grep server
-          kubectl --kubeconfig $HOME/.kube/config get nodes
+          cat /.kube/config | grep server
+          kubectl --kubeconfig /.kube/config get nodes
 
       - name: Deploy updated Docker images
         run: |
