--- a/.github/workflows/CI Pipeline.yaml
+++ b/.github/workflows/CI Pipeline.yaml
@@ -318,9 +318,6 @@ jobs:
         uses: azure/setup-kubectl@v3
         with:
           version: 'latest'
-          
-      - name: Debug DO token presence
-        run: echo "${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" | wc -c
 
       - name: Install & Auth doctl
         uses: digitalocean/action-doctl@v2
@@ -335,24 +332,29 @@ jobs:
       - name: Cluster info
         run: kubectl cluster-info
 
-
-
-
-
-
-
-      - name: Set up kubeconfig
-        run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > ~/.kube/config
-          chmod 600 ~/.kube/config
-
-      - name: Test kubectl connection
-        run: |
-          cat ~/.kube/config | grep server
-          kubectl --kubeconfig ~/.kube/config get nodes
-
       - name: Deploy updated Docker images
         run: |
           kubectl set image deployment/mdblog-api mdblog-api=ghcr.io/${{ secrets.GHCR_USERNAME }}/mdblog-api:latest -n mdblog
           kubectl set image deployment/mdblog-client mdblog-client=ghcr.io/${{ secrets.GHCR_USERNAME }}/mdblog-useless-client:latest -n mdblog
+
+      # Wait for rollout to finish
+      - name: Check rollout status (API)
+        run: kubectl rollout status deployment/mdblog-api -n mdblog
+
+      - name: Check rollout status (Web)
+        run: kubectl rollout status deployment/mdblog-useless-client -n mdblog
+
+      # Notify Telegram
+      - name: Notify Telegram (success)
+        if: success()
+        run: |
+          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage" \
+              -d chat_id="${{ secrets.TG_CHAT_ID }}" \
+              -d text="✅ Production deployment succeeded: $GITHUB_WORKFLOW for commit $GITHUB_SHA"
+
+      - name: Notify Telegram (failure)
+        if: failure()
+        run: |
+          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TG_TOKEN }}/sendMessage" \
+              -d chat_id="${{ secrets.TG_CHAT_ID }}" \
+              -d text="❌ Production deployment FAILED: $GITHUB_WORKFLOW for commit $GITHUB_SHA"
